Updated link for /periodic/periodicWord.js

--- a/programming/periodicword.html
+++ b/programming/periodicword.html
@@ -7,7 +7,7 @@
         <link rel="icon" href="https://scoutchorton.github.io/scoutcicon.png" type="image/png">
         <script src="https://www.w3schools.com/lib/w3.js"></script>
         <script src="https://scoutchorton.github.io/periodic/periodic.js"></script>
-        <script src="./periodicWord.js"></script>
+        <script src="https://scoutchorton.github.io/periodic/periodicWord.js"></script>
         <!--<script src="./tableGenerator.js"></script>-->
         <script>
         function fadingin(){
