Added script to run table generator
Remember: If you link a script, you still have to run it, genius!

--- a/programming/periodictable.html
+++ b/programming/periodictable.html
@@ -22,6 +22,7 @@
             <div class="page">
               <h3>Periodic Table of the Elements</h3>
               <table id="periodic-table"></table>
+              <script>tableGen(["", ""]);</script>
             </div>
         </center>
         <div id="footer">
