Changed to reference 'nav.css'

--- a/nav.html
+++ b/nav.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="https://scoutchorton.github.io/styles.css" />
+<link rel="stylesheet" type="text/css" href="https://scoutchorton.github.io/nav.css" />
 <div id="menu">
     <div style="margin-right: 0;">
         <table cellpadding="0" id="navt">
