Changed src for iFrame

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script src="https://www.w3schools.com/lib/w3.js"></script>
     </head>
     <body>
-        <iframe id="menuFrame" src="http://scoutchorton.github.io/nav.html"></iframe>
+        <iframe id="menuFrame" src="https://scoutchorton.github.io/nav.html"></iframe>
         <center>
             <div class="page">
                 <br>
