Updated nav to make elements inline

--- a/nav.html
+++ b/nav.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" type="text/css" href="https://scoutchorton.github.io/nav.css" />
 <div id="menu">
-    <div style="margin-right: 0;">
+    <div style="display: inline-block; margin-right: 0;">
         <table cellpadding="0" id="navt">
             <tbody>
                 <tr>
@@ -15,7 +15,7 @@
             </tbody>
         </table>
     </div>
-    <div>
+    <div style="display: inline-block;">
         <img id="menuimg" src="https://scoutchorton.github.io/menu.svg" />
     </div>
 </div>
