--- a/index.html
+++ b/index.html
@@ -12,8 +12,20 @@
         }
         </script>
         <script src="https://www.w3schools.com/lib/w3.js"></script>
+        <!-- Firebase Start -->
+        <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase.js"></script>
+	    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-app.js"></script>
+	    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-auth.js"></script>
+	    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-database.js"></script>
+	    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-firestore.js"></script>
+	    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-messaging.js"></script>
+	    <!-- Firebase End  -->
+	    <!-- Firebase Scripts Start -->
+	    <script src="https://scoutchorton/firebase/firebaseTools.js"></script>
+	    <!-- firebase Scripts End -->
     </head>
     <body>
+        <p style="display: none;" id="fbHits"></p>
         <iframe id="menuFrame" src="https://scoutchorton.github.io/nav.html"></iframe>
         <center>
             <div class="page">
@@ -46,7 +58,7 @@
             </table>
         </div>
         <script>
-            w3.includeHTML();
-        </script>
+    	    setTimeout(function(){updateHits("home")}, 2500);
+	    </script>
     </body>
 </html>
