Finished link to firebaseTools

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <script src="https://www.w3schools.com/lib/w3.js"></script>
         <!-- Firebase Start -->
         <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase.js"></script>
-	    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-app.js"></script>
-	    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-auth.js"></script>
-	    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-database.js"></script>
-	    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-firestore.js"></script>
-	    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-messaging.js"></script>
-	    <!-- Firebase End  -->
-	    <!-- Firebase Scripts Start -->
-	    <script src="https://scoutchorton/firebase/firebaseTools.js"></script>
-	    <!-- firebase Scripts End -->
+    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-messaging.js"></script>
+    <!-- Firebase End  -->
+    <!-- Firebase Scripts Start -->
+    <script src="https://scoutchorton.github.io/firebase/firebaseTools.js"></script>
+    <!-- firebase Scripts End -->
     </head>
     <body>
         <p style="display: none;" id="fbHits"></p>
