Added to line 61

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </table>
         </div>
         <script>
-    	    setTimeout(function(){updateHits("home")}, 2500);
+    	    setTimeout(function(){updateHits("home"); console.log("Hits updated.");}, 2500);
 	    </script>
     </body>
 </html>
