Changed padding-bottom issues with styles (bled into BibleThoughts).

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <center>
-            <div class="page">
+            <div class="page" style="height: 650px;">
                 <br>
                 <u style="font-size: 20px;">New scoutchorton website!!</u><br>
                 <br>
