--- a/clock/clock.html
+++ b/clock/clock.html
@@ -4,7 +4,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <title>Clock</title>
         <script src="scripts.js"></script>        
-        <link href="styles.css" rel="stylesheet" type="text/css">
+        <style>body{margin:0;}</style>
     </head>
     <body>
         <center>
