--- a/clock/rotClock.html
+++ b/clock/rotClock.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <title>Clock</title>
-        <script src="scripts.js"></script>        
+        <script src="rotScripts.js"></script>        
         <style>body{margin:0;}</style>
     </head>
     <body>
