--- a/clock/trigClock.html
+++ b/clock/trigClock.html
@@ -4,7 +4,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <title>Clock</title>
         <script src="trigScripts.js"></script>        
-        <style>body{margin:0;}</style>
+        <style>body{margin:0;}canvas{background:rgba(0,0,0,0);}</style>
     </head>
     <body>
         <center>
