--- a/programming/periodictable.html
+++ b/programming/periodictable.html
@@ -5,7 +5,6 @@
         <link rel="stylesheet" type="text/css" href="https://scoutchorton.github.io/styles.css" />
         <link href="https://fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Condensed" rel="stylesheet">
         <link rel="icon" href="https://scoutchorton.github.io/scoutcicon.png" type="image/png">
-        <script src="https://www.w3schools.com/lib/w3.js"></script>
         <script src="https://scoutchorton.github.io/periodic/periodic.js"></script>
         <script src="https://scoutchorton.github.io/periodic/periodicWord.js"></script>
         <script src="https://scoutchorton.github.io/periodic/tableGenerator.js"></script>
@@ -17,7 +16,7 @@
         </script>
     </head>
     <body>
-        <div w3-include-html="../nav.html"></div>
+        <iframe id="menuFrame" src="https://scoutchorton.github.io/nav.html"></iframe>
         <center>
             <div class="page">
               <h3>Periodic Table of the Elements</h3>
@@ -34,8 +33,5 @@
                 </tr>
             </table>
         </div>
-        <script>
-            w3.includeHTML();
-        </script>
     </body>
 </html>
